# pyswiftDemangler

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pyswiftdemangler.py  setup.py
.github/workflows/: publish-to-pypi.yml
lib/: readme.md
pyswiftdemangler/: __init__.py  cli.py  core.py
